# green-aureus

./: LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
docs/: rust-setup.md
node/: Cargo.toml
node/res/: green-aureus-alphanet.json
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/supply-chain/: Cargo.toml
pallets/supply-chain/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
scripts/: docker_run.sh
