[package]
authors = ["Green Aureus"]
build = "build.rs"
description = "Environmentally sustainable supply chain"
edition = "2021"
homepage = "https://greenaureus.de"
license = "Unlicense"
name = "green-aureus"
repository = "https://github.com/green-aureus/green-aureus"
version = "0.0.1"

[[bin]]
name = "green-aureus"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-build-script-utils = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }

[dependencies]
hex-literal = "0.3.4"
jsonrpc-core = "18.0.0"
structopt = "0.3.25"

# local dependencies
green-aureus-runtime = { path = "../runtime", version = "0.0.1" }

# Substrate dependencies
frame-benchmarking = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-cli = { branch = "polkadot-v0.9.14", features = ["wasmtime"], git = "https://github.com/paritytech/substrate" }
sc-client-api = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-consensus = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-executor = { branch = "polkadot-v0.9.14", features = ["wasmtime"], git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-keystore = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-rpc = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-service = { branch = "polkadot-v0.9.14", features = ["wasmtime"], git = "https://github.com/paritytech/substrate" }
sc-telemetry = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-api = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-consensus = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }

[features]
default = []
runtime-benchmarks = ["green-aureus-runtime/runtime-benchmarks"]
