[package]
authors = ["Green Aureus"]
edition = "2021"
homepage = "https://greenaureus.de"
license = "Unlicense"
name = "green-aureus-runtime"
repository = "https://github.com/green-aureus/green-aureus"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { branch = "polkadot-v0.9.14", git = "https://github.com/paritytech/substrate" }

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { optional = true, version = "0.3.4" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
frame-executive = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-benchmarking = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
frame-system-rpc-runtime-api = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-aura = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-api = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }

# Green Aureus
pallet-supply-chain = { default-features = false, path = "../pallets/supply-chain" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-supply-chain/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-supply-chain/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]