[package]
name = "pallet-supply-chain"
version = "0.0.1"
description = "Store and retrieved each step of supply chains"
authors = ["Green Aureus"]
homepage = "https://greenaureus.de"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/green-aureus/green-aureus"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { version = "2.0.0", default-features = false, features = ["derive", "full"], package = "parity-scale-codec" }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
frame-support = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-benchmarking = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate", optional=true }
sp-runtime = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
pallet-timestamp = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.14", default-features = false, git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std"
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
